--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,12 @@ paket-files/
 # JetBrains Rider
 .idea/
 *.sln.iml
+
+# Include library files that are needed
+!/dependencies/Raknet/
+!/dependencies/Raknet/*
+!/dependencies/Raknet/**/*
+!/dependencies/libsndfile/bin/
+!/dependencies/libsndfile/bin/*
+!/bin/
+!/bin/*
