Characters now belong to the game instance. Squads now store pointers to these characters. Added action point tracking & several other functions to character class. Added functionality to TileMap class. Will need to be merged with the copy from home (which I forgot to push, oops) before things are working properly. Added MapVec3 class to store map coordinates (using shorts). Started implementing movement action handling. The client is now able to send a message to the server containing a characterID and destination. The server then checks if the move is valid, and creates a Movement Action (WIP) to send back each client.

--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -33,13 +33,13 @@
     <ClCompile Include="Character.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Player.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="GameAction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Squad.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MovementAction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -62,13 +62,13 @@
     <ClInclude Include="Character.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Player.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="GameAction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Squad.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MovementAction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
