--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -158,7 +158,7 @@
     <ClCompile Include="GameAction.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="MovementAction.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="Squad.cpp" />
     <ClCompile Include="TileMap.cpp" />
@@ -169,7 +169,7 @@
     <ClInclude Include="GameAction.h" />
     <ClInclude Include="GameMessages.h" />
     <ClInclude Include="GameObject.h" />
-    <ClInclude Include="Player.h" />
+    <ClInclude Include="MovementAction.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="Squad.h" />
     <ClInclude Include="TileMap.h" />
