Implemented A* Pathfinding into tile map class. Need to change how the list is sorted using the lambda function. Restructured Action classes. Actions should now call execute on update frame (using deltaTime), and continue until they are marked as completed. Fixed Character's remainingActionPoints function. Added distance function for MapVec3

--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MovementAction.cpp" />
     <ClCompile Include="Server.cpp" />
+    <ClCompile Include="ShootAction.cpp" />
     <ClCompile Include="Squad.cpp" />
     <ClCompile Include="TileMap.cpp" />
   </ItemGroup>
@@ -171,6 +172,7 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="MovementAction.h" />
     <ClInclude Include="Server.h" />
+    <ClInclude Include="ShootAction.h" />
     <ClInclude Include="Squad.h" />
     <ClInclude Include="TileMap.h" />
   </ItemGroup>
