--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="MovementAction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ShootAction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameMessages.h">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MovementAction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ShootAction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
