Fixed sorting in A* pathfinding method in TileMap class. Fixed up some compiler warnings with correct data casts, etc. FindPath method is now available to client & server.
Old "GameAction" action base class is now BaseAction.
Added some more functionality to the existing actions. Client and server now access different Execute functions (allowing the server to simulate instantly without visual lerping, etc).
GameAction class is now a front-end level class that allows the server and client to simulate a more complete action. It contains a list of actions which it will simulate (FIFO), and will handle iteration, etc itself.
Added new game message for server sending a shoot message.
** NOTE: This might actually be better as a single message, since the server will always send a GameAction. It should be handled the same for any type of action anyway. **

Started GearPieceBase class. Nothing impressive here yet, but in future it will allow character statistics to be modified when attack functions, etc are called.

Re-worked function for creating a movement action. Began implementation for triggering overwatch shots using a function called QueryOverwatch, which is called on the waiting squad, then in turn all of the squad's units.
Set up Draw functions for client-side Game class. Currently does not do anything.

NETWORK_SERVER is now defined in the precompiler settings for Server project, rather than the main.cpp file

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -90,12 +90,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Server\BaseAction.cpp" />
+    <ClCompile Include="..\Server\Character.cpp" />
+    <ClCompile Include="..\Server\Game.cpp" />
+    <ClCompile Include="..\Server\GameAction.cpp" />
+    <ClCompile Include="..\Server\GearPieceBase.cpp" />
+    <ClCompile Include="..\Server\Squad.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="ClientSideGameManager.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Server\BaseAction.h" />
+    <ClInclude Include="..\Server\Character.h" />
+    <ClInclude Include="..\Server\Game.h" />
+    <ClInclude Include="..\Server\GameAction.h" />
+    <ClInclude Include="..\Server\GearPieceBase.h" />
+    <ClInclude Include="..\Server\Squad.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Client.h" />
     <ClInclude Include="ClientSideGameManager.h" />
