--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -123,7 +123,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NETWORK_SERVER;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -153,10 +153,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BaseAction.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameAction.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="GearPieceBase.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MovementAction.cpp" />
     <ClCompile Include="Server.cpp" />
@@ -165,11 +167,13 @@
     <ClCompile Include="TileMap.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BaseAction.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameAction.h" />
     <ClInclude Include="GameMessages.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="GearPieceBase.h" />
     <ClInclude Include="MovementAction.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="ShootAction.h" />
