Implemented Bresenham's line algorithm within TileMap class to check for lines of sight. MapVec3 now has a function to find which direction another specified MapVec3 is in from the current instance's position. This is now called within the SightBetweenTiles method to clean up the code a bit. All action classes now have a Write method on the server. These currently have not been fully implemented. Squad and Character class methods QueryOverwatch now take a reference to a TileMap. This allows a character in overwatch to properly check if they have sight on the moving character. QueryOverwatch method calls on a static Game method called GetShotVariables. This function is yet to be properly implemented, but will handle calculation for damage, etc. Added OverwatchShotAction class, which takes a pointer to a ShootAction instance. Handles pulling the character out of overwatch after the shot. CreateMovementAction function in Game class will now check overwatch a final time after the last movement is taken, and simulate it properly. Fixed up a few syntax errors, etc

--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="GearPieceBase.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MovementAction.cpp" />
+    <ClCompile Include="OverwatchShotAction.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="ShootAction.cpp" />
     <ClCompile Include="Squad.cpp" />
@@ -175,6 +176,7 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GearPieceBase.h" />
     <ClInclude Include="MovementAction.h" />
+    <ClInclude Include="OverwatchShotAction.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="ShootAction.h" />
     <ClInclude Include="Squad.h" />
