--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="GearPieceBase.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OverwatchShotAction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameMessages.h">
@@ -87,6 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GearPieceBase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OverwatchShotAction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
