Added classes for weapons. Each weapon type has a virtual function GetRangeBonus, which calculates a bonus to hit chance based on distance. These functions are based on how the calculations are made in XCOM. Added functionality to get cover in a specific direction to TileMap class. GameMessages now uses ID_SERVER_SEND_ACTION, rather than a separate message for each action type. Added more functions to get a character's current stats, such as Aim, Defense, etc. These use the same formulae as XCOM. Changed the way Game's GetShotVariables function works. Game now has functions to calculate hit chance, damage, and crit chance. Game class is now a singleton. Constructor / Destructor should probably be fixed. Squad now has function to iterate through and find a specified character via position

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -95,7 +95,12 @@
     <ClCompile Include="..\Server\Game.cpp" />
     <ClCompile Include="..\Server\GameAction.cpp" />
     <ClCompile Include="..\Server\GearPieceBase.cpp" />
+    <ClCompile Include="..\Server\GunBase.cpp" />
+    <ClCompile Include="..\Server\Shotgun.cpp" />
+    <ClCompile Include="..\Server\SniperRifle.cpp" />
     <ClCompile Include="..\Server\Squad.cpp" />
+    <ClCompile Include="..\Server\StandardGun.cpp" />
+    <ClCompile Include="..\Server\TileMap.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="ClientSideGameManager.cpp" />
@@ -107,7 +112,12 @@
     <ClInclude Include="..\Server\Game.h" />
     <ClInclude Include="..\Server\GameAction.h" />
     <ClInclude Include="..\Server\GearPieceBase.h" />
+    <ClInclude Include="..\Server\GunBase.h" />
+    <ClInclude Include="..\Server\Shotgun.h" />
+    <ClInclude Include="..\Server\SniperRifle.h" />
     <ClInclude Include="..\Server\Squad.h" />
+    <ClInclude Include="..\Server\StandardGun.h" />
+    <ClInclude Include="..\Server\TileMap.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Client.h" />
     <ClInclude Include="ClientSideGameManager.h" />
