Implemented basic GameObj class. (Had some issues with the previous GameObject class, for some reason the only way I could fix this was to delete it and create a GameObj class instead) Finished Character's client-side move function. Now a bool type function. Returns true if player is at destination. Changed Game's GetMap function to be static. Added static GetMapTileScale function to Game class. Tile scale is now a member variable of Game. Fixed a few syntax errors in GameAction class which would not compile. Server precompile settings now has NETWORK_SERVER define for debug mode. Changed some Get functions in tileMap class to be const (as they do not change any values).

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -104,6 +104,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="ClientSideGameManager.cpp" />
+    <ClCompile Include="GameObj.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -121,6 +122,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Client.h" />
     <ClInclude Include="ClientSideGameManager.h" />
+    <ClInclude Include="GameObj.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
