--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="..\Server\StandardGun.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameObj.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Client.h">
@@ -102,6 +105,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\Server\StandardGun.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObj.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
