Game's action queue writing has now been moved to the GameAction's write function. Further implemented Game's read function. Still need to fix an issue with creating new characters on read. GameAction will now read each action's type and create them with the appropriate method. Added function to Squad class to add a character. Made a few small fixes here and there.

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -96,6 +96,9 @@
     <ClCompile Include="..\Server\GameAction.cpp" />
     <ClCompile Include="..\Server\GearPieceBase.cpp" />
     <ClCompile Include="..\Server\GunBase.cpp" />
+    <ClCompile Include="..\Server\MovementAction.cpp" />
+    <ClCompile Include="..\Server\OverwatchShotAction.cpp" />
+    <ClCompile Include="..\Server\ShootAction.cpp" />
     <ClCompile Include="..\Server\Shotgun.cpp" />
     <ClCompile Include="..\Server\SniperRifle.cpp" />
     <ClCompile Include="..\Server\Squad.cpp" />
@@ -114,6 +117,9 @@
     <ClInclude Include="..\Server\GameAction.h" />
     <ClInclude Include="..\Server\GearPieceBase.h" />
     <ClInclude Include="..\Server\GunBase.h" />
+    <ClInclude Include="..\Server\MovementAction.h" />
+    <ClInclude Include="..\Server\OverwatchShotAction.h" />
+    <ClInclude Include="..\Server\ShootAction.h" />
     <ClInclude Include="..\Server\Shotgun.h" />
     <ClInclude Include="..\Server\SniperRifle.h" />
     <ClInclude Include="..\Server\Squad.h" />
