--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="SniperRifle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RefreshWalkableTilesAction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameMessages.h">
@@ -111,6 +114,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SniperRifle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RefreshWalkableTilesAction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
