--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -98,6 +98,7 @@
     <ClCompile Include="..\Server\GunBase.cpp" />
     <ClCompile Include="..\Server\MovementAction.cpp" />
     <ClCompile Include="..\Server\OverwatchShotAction.cpp" />
+    <ClCompile Include="..\Server\RefreshWalkableTilesAction.cpp" />
     <ClCompile Include="..\Server\ShootAction.cpp" />
     <ClCompile Include="..\Server\Shotgun.cpp" />
     <ClCompile Include="..\Server\SniperRifle.cpp" />
@@ -119,6 +120,7 @@
     <ClInclude Include="..\Server\GunBase.h" />
     <ClInclude Include="..\Server\MovementAction.h" />
     <ClInclude Include="..\Server\OverwatchShotAction.h" />
+    <ClInclude Include="..\Server\RefreshWalkableTilesAction.h" />
     <ClInclude Include="..\Server\ShootAction.h" />
     <ClInclude Include="..\Server\Shotgun.h" />
     <ClInclude Include="..\Server\SniperRifle.h" />
