--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="..\Server\ShootAction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Server\RefreshWalkableTilesAction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Client.h">
@@ -126,6 +129,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\Server\ShootAction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Server\RefreshWalkableTilesAction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
