--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MovementAction.cpp" />
     <ClCompile Include="OverwatchShotAction.cpp" />
+    <ClCompile Include="RefreshWalkableTilesAction.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="ShootAction.cpp" />
     <ClCompile Include="Shotgun.cpp" />
@@ -180,6 +181,7 @@
     <ClInclude Include="GunBase.h" />
     <ClInclude Include="MovementAction.h" />
     <ClInclude Include="OverwatchShotAction.h" />
+    <ClInclude Include="RefreshWalkableTilesAction.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="ShootAction.h" />
     <ClInclude Include="Shotgun.h" />
