Created a new BaseAction subclass SetPointsAction which sets the remaining action points of the owner character. The server now correctly decreases the points of a character when they move. AStar method no longer crashes when selecting a path longer than one tile, (previousNode was never initialized to nullptr), however the method still does not work as intended. It seems that selecting a longer path only returns a path of the initial tile.

--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="..\Server\RefreshWalkableTilesAction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Server\SetPointsAction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Client.h">
@@ -132,6 +135,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\Server\RefreshWalkableTilesAction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Server\SetPointsAction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
