--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -99,6 +99,7 @@
     <ClCompile Include="..\Server\MovementAction.cpp" />
     <ClCompile Include="..\Server\OverwatchShotAction.cpp" />
     <ClCompile Include="..\Server\RefreshWalkableTilesAction.cpp" />
+    <ClCompile Include="..\Server\SetPointsAction.cpp" />
     <ClCompile Include="..\Server\ShootAction.cpp" />
     <ClCompile Include="..\Server\Shotgun.cpp" />
     <ClCompile Include="..\Server\SniperRifle.cpp" />
@@ -121,6 +122,7 @@
     <ClInclude Include="..\Server\MovementAction.h" />
     <ClInclude Include="..\Server\OverwatchShotAction.h" />
     <ClInclude Include="..\Server\RefreshWalkableTilesAction.h" />
+    <ClInclude Include="..\Server\SetPointsAction.h" />
     <ClInclude Include="..\Server\ShootAction.h" />
     <ClInclude Include="..\Server\Shotgun.h" />
     <ClInclude Include="..\Server\SniperRifle.h" />
