--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="OverwatchShotAction.cpp" />
     <ClCompile Include="RefreshWalkableTilesAction.cpp" />
     <ClCompile Include="Server.cpp" />
+    <ClCompile Include="SetPointsAction.cpp" />
     <ClCompile Include="ShootAction.cpp" />
     <ClCompile Include="Shotgun.cpp" />
     <ClCompile Include="SniperRifle.cpp" />
@@ -183,6 +184,7 @@
     <ClInclude Include="OverwatchShotAction.h" />
     <ClInclude Include="RefreshWalkableTilesAction.h" />
     <ClInclude Include="Server.h" />
+    <ClInclude Include="SetPointsAction.h" />
     <ClInclude Include="ShootAction.h" />
     <ClInclude Include="Shotgun.h" />
     <ClInclude Include="SniperRifle.h" />
