--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="RefreshWalkableTilesAction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SetPointsAction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameMessages.h">
@@ -117,6 +120,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RefreshWalkableTilesAction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SetPointsAction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
