Camera zoom functionality is now complete. Speed may need to be tweaked. Created a new BaseAction derived class called SetVisibleEnemiesAction. Characters now store a list of pointers to each character they have a line of sight to. The new action class simply sets these lists when executed. Raycast method on TileMap now takes in a rayLength parameter to increase efficiency. Modified the ShootAction class to store a shot status variable. This can be used to display info about the shot to the client on screen. Game class now has a function to get a list of all enemies visible to a specified character. CreateShotAction function in Game class should now be working. Will first need to implement a way for a client to choose which character to shoot.

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="..\Server\OverwatchShotAction.cpp" />
     <ClCompile Include="..\Server\RefreshWalkableTilesAction.cpp" />
     <ClCompile Include="..\Server\SetPointsAction.cpp" />
+    <ClCompile Include="..\Server\SetVisibleEnemiesAction.cpp" />
     <ClCompile Include="..\Server\ShootAction.cpp" />
     <ClCompile Include="..\Server\Shotgun.cpp" />
     <ClCompile Include="..\Server\SniperRifle.cpp" />
@@ -123,6 +124,7 @@
     <ClInclude Include="..\Server\OverwatchShotAction.h" />
     <ClInclude Include="..\Server\RefreshWalkableTilesAction.h" />
     <ClInclude Include="..\Server\SetPointsAction.h" />
+    <ClInclude Include="..\Server\SetVisibleEnemiesAction.h" />
     <ClInclude Include="..\Server\ShootAction.h" />
     <ClInclude Include="..\Server\Shotgun.h" />
     <ClInclude Include="..\Server\SniperRifle.h" />
