--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="..\Server\SetPointsAction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Server\SetVisibleEnemiesAction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Client.h">
@@ -138,6 +141,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\Server\SetPointsAction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Server\SetVisibleEnemiesAction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
