Added HUD elements for selecting an enemy to shoot at. Selected enemy's tile will be hilighted with a gizmo. TileMap's raycast will now exit if the direction vector specified has a null value

--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -5,6 +5,11 @@ Collapsed=0
 
 [Current Character]
 Pos=1,4
-Size=310,67
+Size=316,100
+Collapsed=0
+
+[Enemies]
+Pos=55,124
+Size=157,245
 Collapsed=0
 
