Controlled characters now draw in green rather than red. After downloading game data, client will now automatically select the first character in the player's squad. Added a new class derived from BaseAction which handles the end of a turn. Creating a move or shoot action on the server will now check if the turn should end, and if so, adds one of these actions to the queue. BaseAction now stores a boolean which decides if it requires an owner. This now allows actions to be executed without an owner if one is not needed, such as the action to end a turn. Characters should no longer be able to move to a square currently occupied by another character. !! ** NOTE: There still seems to be an issue with updating a characters position after moving. In a few cases, the above fix does not work and a character is able to move into an already occupied space. ** !!

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -106,6 +106,7 @@
     <ClCompile Include="..\Server\SniperRifle.cpp" />
     <ClCompile Include="..\Server\Squad.cpp" />
     <ClCompile Include="..\Server\StandardGun.cpp" />
+    <ClCompile Include="..\Server\StartNewTurnAction.cpp" />
     <ClCompile Include="..\Server\TileMap.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Client.cpp" />
@@ -130,6 +131,7 @@
     <ClInclude Include="..\Server\SniperRifle.h" />
     <ClInclude Include="..\Server\Squad.h" />
     <ClInclude Include="..\Server\StandardGun.h" />
+    <ClInclude Include="..\Server\StartNewTurnAction.h" />
     <ClInclude Include="..\Server\TileMap.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Client.h" />
