--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -13,3 +13,18 @@ Pos=6,7
 Size=222,98
 Collapsed=0
 
+[Enemies]
+Pos=9,124
+Size=63,211
+Collapsed=0
+
+[Attack Confirmation]
+Pos=11,338
+Size=220,88
+Collapsed=0
+
+[]
+Pos=2,5
+Size=158,44
+Collapsed=0
+
