--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="SetVisibleEnemiesAction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StartNewTurnAction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameMessages.h">
@@ -129,6 +132,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SetVisibleEnemiesAction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StartNewTurnAction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
