Added action to hunker dow Added functions to Character class to get and set Hunker state. Client Side Game Manager will now check if the selected character has enough points to move a given distance before attempting to send a move action request. Game's CreateShootAction function should now properly simulate on the server before being sent to clients.

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -97,6 +97,7 @@
     <ClCompile Include="..\Server\GameAction.cpp" />
     <ClCompile Include="..\Server\GearPieceBase.cpp" />
     <ClCompile Include="..\Server\GunBase.cpp" />
+    <ClCompile Include="..\Server\HunkerAction.cpp" />
     <ClCompile Include="..\Server\MovementAction.cpp" />
     <ClCompile Include="..\Server\OverwatchShotAction.cpp" />
     <ClCompile Include="..\Server\RefreshWalkableTilesAction.cpp" />
@@ -122,6 +123,7 @@
     <ClInclude Include="..\Server\GameAction.h" />
     <ClInclude Include="..\Server\GearPieceBase.h" />
     <ClInclude Include="..\Server\GunBase.h" />
+    <ClInclude Include="..\Server\HunkerAction.h" />
     <ClInclude Include="..\Server\MovementAction.h" />
     <ClInclude Include="..\Server\OverwatchShotAction.h" />
     <ClInclude Include="..\Server\RefreshWalkableTilesAction.h" />
