--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -5,11 +5,21 @@ Collapsed=0
 
 [Current Character]
 Pos=1,4
-Size=316,100
+Size=315,119
 Collapsed=0
 
 [Enemies]
-Pos=55,124
+Pos=50,173
 Size=157,245
+Collapsed=0
+
+[]
+Pos=60,60
+Size=158,44
+Collapsed=0
+
+[Abilities]
+Pos=212,362
+Size=204,88
 Collapsed=0
 
