--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="..\Server\StartNewTurnAction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Server\HunkerAction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Client.h">
@@ -150,6 +153,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\Server\StartNewTurnAction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Server\HunkerAction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
