GetAllCharacterPositions function is no longer private, and is now accessed by the game manager to more accurately display the path. Added function to get remaining health from a character. Added health meter to the HUD. Sending a client move request will now clear the draw-path.

--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -5,11 +5,11 @@ Collapsed=0
 
 [Current Character]
 Pos=1,4
-Size=315,119
+Size=316,131
 Collapsed=0
 
 [Enemies]
-Pos=50,173
+Pos=23,146
 Size=157,245
 Collapsed=0
 
@@ -19,7 +19,12 @@ Size=158,44
 Collapsed=0
 
 [Abilities]
-Pos=212,362
+Pos=16,365
 Size=204,88
+Collapsed=0
+
+[Attack Confirmation]
+Pos=206,364
+Size=136,92
 Collapsed=0
 
