--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="HunkerAction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ReloadAction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameMessages.h">
@@ -141,6 +144,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HunkerAction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ReloadAction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
